<resources>
    <string name="app_name">Appmkt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ingresar</string>
    <string name="title_activity_login">Ingrese</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (optional)</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Ingrese</string>
    <string name="error_invalid_email">Esta dirección de Email es invalida</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <!-- Esto es para la parte del home -->
    <string name="textoHome">MKTLocation es una aplicación a la cual puedes acceder de una manera muy sencilla y puedes localizar rapidamente empresas de acuerdo a lo que estés buscando como hospitales, hoteles, ferreterias, etc. y de acuerdo a tu posición, te muestra las empresas más cercanas a ti.</string>

    <!-- Esto es para la parte de mision y vision -->
    <string name="mision">Mision</string>
    <string name="misionFull">Somos una empresa dedicada a la busqueda y localización de empresas y servicios en la región, abarcando todos los sectores económicos, sociales, culturales y de servicios, generando oportunidades de mercadotecnia.</string>
    <string name="vision">Vision</string>
    <string name="visionFull">Aspiramos ser una empresa de busqueda y localización, preferida por los usuarios, así también expandirnos paulatinamente abarcando todas las entidades del país, manteniendo una mejora contínua.</string>

    <!-- Para la parte de la lista -->
    <string name="ser_hotel">Hoteles</string>
    <string name="ser_hotel_desc">Se muestran los hoteles cercanos a tu hubicación para que puedas tomar una mejor elección.</string>

    <string name="ser_escuela">Escuelas</string>
    <string name="ser_escuela_desc">Se muestran las escuelas cercanas a tu hubicación para que puedas tomar una mejor elección.</string>

    <string name="ser_ferreteria">Ferreteria</string>
    <string name="ser_ferreteria_desc">Se muestran las ferreterias cercanas a tu hubicación para que puedas tomar una mejor elección.</string>

    <string name="ser_hospital">Hospital</string>
    <string name="ser_hospital_desc">Se muestran los hospitales cercanos a tu hubicación para que puedas tomar una mejor elección.</string>


    <!-- Para la parte de "About" -->
    <string name="programador">\n\nProgramadores:</string>
    <string name="programadorFull">Erick Clair\nEmmanuel Hernández</string>
    <string name="project">Nombre del proyecto:</string>
    <string name="projectFull">MKTLocation</string>
    <string name="instituto">Instituto Tecnológico Superior de Tantoyuca</string>
    <string name="source">Código del proyecto:</string>
    <string name="sourceFull">https://github.com/ITSTAInovacion/AppMKT</string>
</resources>
